<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:parentActivityName="com.example.nathan.loadtracker.MainActivity"
    tools:context="com.example.nathan.loadtracker.activities.TrackingActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tracking_activity_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/textPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:elevation="24dp"
        android:onClick="trackData"
        android:text="@string/track"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:targetApi="lollipop" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracking_activity_toolbar"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@drawable/border_style"
                android:text="@string/unit_id"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/unitIDInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border_style"
                android:ems="10"
                android:inputType="text"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@drawable/border_style"
                android:text="@string/material"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/materialInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border_style"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@drawable/border_style"
                android:text="@string/driver_name"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/driverNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border_style"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@drawable/border_style"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/companyNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border_style"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="129dp"
        android:background="@android:color/black"
        android:text="Breakdown"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <RelativeLayout
        android:id="@+id/trackingActivityOutput"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="History Breakdown" />

        <TextView
            android:id="@+id/history_breakdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView8" />

        <TextView
            android:id="@+id/average_load_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView8" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/average_load_time"
            android:layout_alignParentStart="true"
            android:text="Average Run Time" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
